added log for metrics, updated frame size and hop size for mfcc

--- a/SVM_Classifier.ipynb
+++ b/SVM_Classifier.ipynb
@@ -80,6 +80,14 @@
     "        precision_test = metrics.precision_score(y_test, y_test_pred, average='micro')\n",
     "        precision_validation = metrics.precision_score(y_validation, y_validation_pred, average='micro')\n",
     "\n",
+    "        #save metrics to file\n",
+    "        try:\n",
+    "            with open('log.txt', 'w') as file:\n",
+    "                file.write(f'Accuracy on test: {acc_test}, Accuracy on validation: {acc_validation} \\n'\n",
+    "                           f'Precision on test: {precision_test}, Precision on validation: {precision_validation} \\n'\n",
+    "                           f'Loss on test: {mse_test}, Loss on validation: {mse_validation}\\n')\n",
+    "        except FileNotFoundError:\n",
+    "            print('File not found')\n",
     "        # print metrics\n",
     "        print(f'Accuracy on test: {acc_test}, Accuracy on validation: {acc_validation} \\n'\n",
     "              f'Precision on test: {precision_test}, Precision on validation: {precision_validation} \\n'\n",
@@ -143,45 +151,45 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy on test: 0.844, Accuracy on validation: 0.8401420959147424 \n",
-      "Precision on test: 0.844, Precision on validation: 0.8401420959147424 \n",
-      "Loss on test: 0.732, Loss on validation: 0.8046181172291297\n",
+      "Accuracy on test: 0.84, Accuracy on validation: 0.8081705150976909 \n",
+      "Precision on test: 0.84, Precision on validation: 0.8081705150976909 \n",
+      "Loss on test: 1.012, Loss on validation: 0.6927175843694494\n",
       "\n",
-      "Accuracy on test: 0.804, Accuracy on validation: 0.8294849023090586 \n",
-      "Precision on test: 0.804, Precision on validation: 0.8294849023090586 \n",
-      "Loss on test: 0.752, Loss on validation: 0.8738898756660746\n",
+      "Accuracy on test: 0.808, Accuracy on validation: 0.827708703374778 \n",
+      "Precision on test: 0.808, Precision on validation: 0.827708703374778 \n",
+      "Loss on test: 0.684, Loss on validation: 0.8365896980461812\n",
       "\n",
-      "Accuracy on test: 0.828, Accuracy on validation: 0.8152753108348135 \n",
-      "Precision on test: 0.828, Precision on validation: 0.8152753108348135 \n",
-      "Loss on test: 0.888, Loss on validation: 1.1225577264653641\n",
+      "Accuracy on test: 0.86, Accuracy on validation: 0.8188277087033747 \n",
+      "Precision on test: 0.86, Precision on validation: 0.8188277087033747 \n",
+      "Loss on test: 0.384, Loss on validation: 0.8934280639431617\n",
       "\n",
-      "Accuracy on test: 0.852, Accuracy on validation: 0.8170515097690941 \n",
-      "Precision on test: 0.852, Precision on validation: 0.8170515097690941 \n",
-      "Loss on test: 0.832, Loss on validation: 1.0657193605683837\n",
+      "Accuracy on test: 0.844, Accuracy on validation: 0.8046181172291297 \n",
+      "Precision on test: 0.844, Precision on validation: 0.8046181172291297 \n",
+      "Loss on test: 0.876, Loss on validation: 0.9236234458259325\n",
       "\n",
-      "Accuracy on test: 0.82, Accuracy on validation: 0.822380106571936 \n",
-      "Precision on test: 0.82, Precision on validation: 0.822380106571936 \n",
-      "Loss on test: 1.0, Loss on validation: 0.8507992895204263\n",
+      "Accuracy on test: 0.808, Accuracy on validation: 0.8010657193605684 \n",
+      "Precision on test: 0.808, Precision on validation: 0.8010657193605684 \n",
+      "Loss on test: 0.892, Loss on validation: 0.8845470692717584\n",
       "\n",
-      "Accuracy on test: 0.848, Accuracy on validation: 0.8134991119005328 \n",
-      "Precision on test: 0.848, Precision on validation: 0.8134991119005328 \n",
-      "Loss on test: 0.952, Loss on validation: 0.9289520426287744\n",
+      "Accuracy on test: 0.796, Accuracy on validation: 0.8525754884547069 \n",
+      "Precision on test: 0.796, Precision on validation: 0.8525754884547069 \n",
+      "Loss on test: 1.04, Loss on validation: 0.5719360568383659\n",
       "\n",
-      "Accuracy on test: 0.78, Accuracy on validation: 0.8294849023090586 \n",
-      "Precision on test: 0.78, Precision on validation: 0.8294849023090586 \n",
-      "Loss on test: 1.276, Loss on validation: 0.8152753108348135\n",
-      "\n",
-      "Accuracy on test: 0.784, Accuracy on validation: 0.7850799289520426 \n",
-      "Precision on test: 0.784, Precision on validation: 0.7850799289520426 \n",
-      "Loss on test: 1.148, Loss on validation: 0.9378330373001776\n",
-      "\n",
-      "Accuracy on test: 0.804, Accuracy on validation: 0.7957371225577264 \n",
-      "Precision on test: 0.804, Precision on validation: 0.7957371225577264 \n",
-      "Loss on test: 1.172, Loss on validation: 0.91651865008881\n",
+      "Accuracy on test: 0.808, Accuracy on validation: 0.8401420959147424 \n",
+      "Precision on test: 0.808, Precision on validation: 0.8401420959147424 \n",
+      "Loss on test: 0.776, Loss on validation: 0.6163410301953819\n",
       "\n",
       "Accuracy on test: 0.824, Accuracy on validation: 0.8170515097690941 \n",
       "Precision on test: 0.824, Precision on validation: 0.8170515097690941 \n",
-      "Loss on test: 0.804, Loss on validation: 0.8685612788632326\n",
+      "Loss on test: 0.956, Loss on validation: 0.822380106571936\n",
+      "\n",
+      "Accuracy on test: 0.82, Accuracy on validation: 0.827708703374778 \n",
+      "Precision on test: 0.82, Precision on validation: 0.827708703374778 \n",
+      "Loss on test: 0.828, Loss on validation: 0.8969804618117229\n",
+      "\n",
+      "Accuracy on test: 0.852, Accuracy on validation: 0.8259325044404974 \n",
+      "Precision on test: 0.852, Precision on validation: 0.8259325044404974 \n",
+      "Loss on test: 0.584, Loss on validation: 1.0124333925399644\n",
       "\n"
      ]
     }
